--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ const isThankYouPage =
 				<div class="flex items-center justify-between gap-[10px]">
 					<a href="/">
 						<img
-							class="w-[77px] md:w-[120px]"
+							class="h-[42px] md:h-[54px]"
 							src="/logo.svg"
 							alt="Rodzina Bez Długów"
 						/>
@@ -28,7 +28,7 @@ const isThankYouPage =
 							</a>
 						</div>
 						<span class="hidden md:inline">lub:</span>
-						<a href="#formularz" class="button">
+						<a href="/#formularz" class="button">
 							<span class="hidden md:inline">Zacznij ZA DARMO</span>
 							<span class="md:hidden text-[11px]">Zacznij ZA DARMO</span>
 						</a>
