--- a/src/components/blog/BlogHeader.astro
+++ b/src/components/blog/BlogHeader.astro
@@ -13,7 +13,7 @@ const { title, imageUrl } = Astro.props;
   <Container>
     <div class="flex flex-col lg:flex-row lg:items-center">
       <div class="p-4 lg:py-8 flex-1">
-        <h1 class="text-xl lg:text-3xl text-white font-medium">{title}</h1>
+        <h1 class="text-xl lg:text-3xl text-white font-medium text-center">{title}</h1>
       </div>
       {
         imageUrl && (
