--- a/src/pages/[postCategorySlug]/page/[page].astro
+++ b/src/pages/[postCategorySlug]/page/[page].astro
@@ -17,6 +17,7 @@ if (isNaN(pageAsNumber)) {
 }
 
 const response = await StrapiPostEndpoints.getCategoryPosts(
+  Astro.locals,
   postCategorySlug,
   pageAsNumber
 );
